main/*: make CMake and meson respect our C{,PP,XX}FLAGS
See: https://lists.alpinelinux.org/~alpine/devel/%3C2896c13070c508a49cbaa72c8fb7f34ea947358b.camel%40cogitri.dev%3E

--- a/main/at-spi2-core/APKBUILD
+++ b/main/at-spi2-core/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=at-spi2-core
 pkgver=2.34.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Protocol definitions and daemon for D-Bus at-spi"
 url="https://www.freedesktop.org/wiki/Accessibility/AT-SPI2/"
 arch="all"
@@ -14,7 +14,7 @@ source="https://download.gnome.org/sources/at-spi2-core/${pkgver%.*}/at-spi2-cor
 
 build() {
 	meson \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		--prefix=/usr \
 		-Dx11=yes \
 		-Dintrospection=yes \
