--- a/main/atk/APKBUILD
+++ b/main/atk/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=atk
 pkgver=2.34.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A library providing a set of interfaces for accessibility"
 url="https://www.gtk.org/"
 arch="all"
@@ -15,9 +15,9 @@ build() {
 	cd "$builddir"
 	meson \
 		--prefix=/usr \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		--sysconfdir=/etc \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Ddocs=true \
 		output .
 	ninja -C output
