--- a/main/czmq/APKBUILD
+++ b/main/czmq/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=czmq
 pkgver=4.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="High-level C binding for ZeroMQ"
 url="http://czmq.zeromq.org/"
 arch="all !s390x"  # zproxy test timeouts on s390x
@@ -16,7 +16,7 @@ builddir="$srcdir/$pkgname-$pkgver"
 build() {
 	# Note: One test segfaults when built with MinSizeRel (-Os).
 	cmake \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_VERBOSE_MAKEFILE=ON
 	make
