--- a/main/dconf/APKBUILD
+++ b/main/dconf/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=dconf
 pkgver=0.34.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A low-level configuration system."
 url="https://wiki.gnome.org/Projects/dconf"
 arch="all"
@@ -18,7 +18,7 @@ build() {
 	meson \
 		--prefix=/usr \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
