--- a/main/exiv2/APKBUILD
+++ b/main/exiv2/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=exiv2
 pkgver=0.27.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Exif and Iptc metadata manipulation library and tools."
 url="https://exiv2.org"
 arch="all"
@@ -35,7 +35,7 @@ prepare() {
 build() {
 	cd "$builddir"/build
 	cmake .. \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
 	cmake --build .
