--- a/main/freeglut/APKBUILD
+++ b/main/freeglut/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer:
 pkgname=freeglut
 pkgver=3.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="free reimplementation of OpenGL Utility Toolkit (GLUT) library"
 url="http://freeglut.sourceforge.net/"
 arch="all"
@@ -16,7 +16,7 @@ source="https://downloads.sourceforge.net/freeglut/freeglut-$pkgver.tar.gz"
 build() {
 	cd "$builddir"
 	cmake . \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DFREEGLUT_BUILD_STATIC_LIBS=0
