--- a/main/gdk-pixbuf/APKBUILD
+++ b/main/gdk-pixbuf/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gdk-pixbuf
 pkgver=2.40.0
-pkgrel=1
+pkgrel=2
 pkgdesc="GTK+ image loading library"
 url="https://wiki.gnome.org/Projects/GdkPixbuf"
 arch="all"
@@ -27,7 +27,7 @@ replaces="gtk+"
 build() {
 	meson \
 		--prefix=/usr \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Dinstalled_tests=false \
 		output .
 	ninja -C output
