--- a/main/libgcab/APKBUILD
+++ b/main/libgcab/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libgcab
 pkgver=1.4
-pkgrel=0
+pkgrel=1
 pkgdesc="A GObject library to create cabinet files"
 url=" https://wiki.gnome.org/msitools"
 arch="all"
@@ -18,7 +18,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		output
 	ninja -C output
 }
