--- a/main/libgit2/APKBUILD
+++ b/main/libgit2/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libgit2
 pkgver=0.28.4
-pkgrel=0
+pkgrel=1
 pkgdesc="A linkable library for Git"
 url="https://libgit2.org/"
 arch="all"
@@ -48,7 +48,7 @@ build() {
 	cd "$builddir"/build
 
 	cmake .. \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_C_FLAGS="$CFLAGS"
 	make
@@ -58,7 +58,7 @@ build() {
 	cd "$builddir"/build-static
 
 	cmake .. \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DBUILD_SHARED_LIBS=OFF
