--- a/main/libmatroska/APKBUILD
+++ b/main/libmatroska/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=libmatroska
 pkgver=1.5.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Extensible multimedia container format based on EBML"
 url="https://www.matroska.org"
 arch="all"
@@ -21,7 +21,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		${CMAKE_CROSSOPTS}
