--- a/main/lua-lzmq/APKBUILD
+++ b/main/lua-lzmq/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=lua-lzmq
 _pkgname=lzmq
 pkgver=0.4.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Lua bindings to ZeroMQ"
 url="https://github.com/zeromq/lzmq"
 arch="all"
@@ -28,7 +28,7 @@ build() {
 		cd "$builddir"/build/$lver
 
 		cmake \
-			-DCMAKE_BUILD_TYPE=Release \
+			-DCMAKE_BUILD_TYPE=None \
 			-DCMAKE_INSTALL_PREFIX=/usr \
 			-DCMAKE_C_FLAGS="$CFLAGS $(pkg-config --cflags lua$lver)" \
 			-DINSTALL_CMOD=/usr/lib/lua/$lver \
