--- a/main/openjpeg/APKBUILD
+++ b/main/openjpeg/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openjpeg
 pkgver=2.3.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Open-source implementation of JPEG2000 image codec"
 url="https://www.openjpeg.org/"
 arch="all"
@@ -20,7 +20,7 @@ build() {
 	cd "$builddir"
 	cmake . \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+		-DCMAKE_BUILD_TYPE=None \
 		-DOPENJPEG_INSTALL_LIB_DIR=lib
 	make
 }
