--- a/main/py3-gobject3/APKBUILD
+++ b/main/py3-gobject3/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-gobject3
 pkgver=3.34.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Python bindings for the GObject library"
 url="https://wiki.gnome.org/Projects/PyGObject/"
 arch="all"
@@ -25,7 +25,7 @@ build()	{
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Dpython=python3 \
 		. output
 
