--- a/main/sdl2/APKBUILD
+++ b/main/sdl2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: August Klein <amatcoder@gmail.com>
 pkgname=sdl2
 pkgver=2.0.10
-pkgrel=0
+pkgrel=1
 pkgdesc="A development library designed to provide low level access to audio, keyboard, mouse, joystick and graphics"
 url="https://www.libsdl.org"
 arch="all"
@@ -45,7 +45,7 @@ build() {
 	cmake "$builddir" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+		-DCMAKE_BUILD_TYPE=None \
 		-DSDL_TEST=OFF \
 		-DALSA=ON \
 		-DCLOCK_GETTIME=ON \
