--- a/main/snappy/APKBUILD
+++ b/main/snappy/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=snappy
 pkgver=1.1.8
-pkgrel=0
+pkgrel=1
 pkgdesc="Fast compression and decompression library"
 url="https://google.github.io/snappy/"
 arch="all"
@@ -15,7 +15,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/google/snappy/archive/$pkgve
 
 build() {
 	cmake . \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=/usr/lib \
 		-DBUILD_SHARED_LIBS=ON
