--- a/main/spice-protocol/APKBUILD
+++ b/main/spice-protocol/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=spice-protocol
 pkgver=0.14.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Spice protocol header files"
 url="http://www.spice-space.org/"
 arch="noarch"
@@ -16,7 +16,7 @@ build() {
 	cd "$builddir"
 
 	meson build/ \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		--prefix=/usr \
 		--datadir=lib
 
