--- a/main/task/APKBUILD
+++ b/main/task/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=task
 pkgver=2.5.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A command-line to-do list manager"
 url="https://taskwarrior.org"
 arch="all"
@@ -17,7 +17,7 @@ source="https://taskwarrior.org/download/task-$pkgver.tar.gz
 
 build() {
 	cmake . \
-		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make
 }
