--- a/main/tinyxml2/APKBUILD
+++ b/main/tinyxml2/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=tinyxml2
 pkgver=7.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Simple, small and efficient C++ XML parser"
 url="http://www.grinninglizard.com/tinyxml2"
 arch="all"
@@ -20,7 +20,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		$CMAKE_CROSSOPTS
