--- a/main/uriparser/APKBUILD
+++ b/main/uriparser/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=uriparser
 pkgver=0.9.3
-pkgrel=0
+pkgrel=1
 pkgdesc="A strictly RFC 3986 compliant URI parsing and handling library"
 url="https://uriparser.github.io/"
 arch="all"
@@ -22,7 +22,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DURIPARSER_BUILD_DOCS=OFF \
