--- a/main/websocket++/APKBUILD
+++ b/main/websocket++/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: prspkt <prspkt@protonmail.com>
 pkgname=websocket++
 pkgver=0.8.1
-pkgrel=0
+pkgrel=1
 pkgdesc="C++/Boost Asio based websocket client/server library"
 url="https://github.com/zaphoyd/websocketpp"
 arch="all"
@@ -23,7 +23,7 @@ build() {
 	fi
 	cmake \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		${CMAKE_CROSSOPTS}
