--- a/main/x265/APKBUILD
+++ b/main/x265/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=x265
 pkgver=3.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Open Source H265/HEVC video encoder"
 url="http://x265.org"
 arch="all"
@@ -23,7 +23,7 @@ build() {
 	esac
 
 	cmake \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_VERBOSE_MAKEFILE=ON \
 		$cmake_opts \
