--- a/main/at-spi2-atk/APKBUILD
+++ b/main/at-spi2-atk/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=at-spi2-atk
 pkgver=2.34.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A GTK+ module that bridges ATK to D-Bus at-spi"
 url="https://www.freedesktop.org/wiki/Accessibility/AT-SPI2/"
 arch="all"
@@ -19,7 +19,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
