--- a/main/clucene/APKBUILD
+++ b/main/clucene/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=clucene
 pkgver=2.3.3.4
-pkgrel=6
+pkgrel=7
 pkgdesc="A C++ port of Lucene"
 url="http://www.sourceforge.net/projects/clucene"
 arch="all"
@@ -30,7 +30,7 @@ prepare() {
 
 build() {
 	cd "$_builddir"
-	cmake . -DCMAKE_BUILD_TYPE=Release \
+	cmake . -DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_CONTRIBS_LIB=BOOL:ON \
 		-DLIB_DESTINATION:PATH=/usr/lib \
