--- a/main/conky/APKBUILD
+++ b/main/conky/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=conky
 pkgver=1.11.5
-pkgrel=0
+pkgrel=1
 pkgdesc="An advanced, highly configurable system monitor for X based on torsmo"
 url="http://conky.sourceforge.net/"
 arch="all"
@@ -22,7 +22,7 @@ build() {
 	cd "$builddir"
 	cmake . \
 		-DRELEASE=ON \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_CURL=ON \
 		-DBUILD_XDBE=ON \
