--- a/main/encfs/APKBUILD
+++ b/main/encfs/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=encfs
 pkgver=1.9.5
 _ver=${pkgver/_/-}
-pkgrel=4
+pkgrel=5
 pkgdesc="EncFS provides an encrypted filesystem in user-space"
 url="https://vgough.github.io/encfs/"
 arch="all"
@@ -31,7 +31,7 @@ build() {
 		-DBUILD_SHARED_LIBS=ON \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		${CMAKE_CROSSOPTS}
