--- a/main/fish/APKBUILD
+++ b/main/fish/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=fish
 pkgver=3.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Modern interactive commandline shell"
 url="http://www.fishshell.com"
 arch="all"
@@ -30,7 +30,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_SYSCONFDIR=/etc \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
