--- a/main/fuse3/APKBUILD
+++ b/main/fuse3/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=fuse3
 _pkgname=fuse
 pkgver=3.9.0
-pkgrel=1
+pkgrel=2
 pkgdesc="The reference implementation of the Linux FUSE (Filesystem in Userspace) interface"
 url="https://github.com/libfuse/libfuse"
 arch="all"
@@ -30,7 +30,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
