--- a/main/glfw/APKBUILD
+++ b/main/glfw/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Daniel Sabogal <dsabogalcc@gmail.com>
 pkgname=glfw
 pkgver=3.3.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Multi-platform library for OpenGL and Vulkan application development"
 url="https://www.glfw.org/"
 arch="all"
@@ -15,7 +15,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/glfw/glfw/archive/$pkgver.ta
 
 build() {
 	cmake . \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=ON
