--- a/main/glslang/APKBUILD
+++ b/main/glslang/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=glslang
 pkgver=8.13.3559
-pkgrel=2
+pkgrel=3
 pkgdesc="Khronos reference front-end for GLSL, ESSL, and sample SPIR-V generator"
 options="!check" # Requires git checkout of gmock
 url="https://github.com/KhronosGroup/glslang"
@@ -22,7 +22,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DBUILD_SHARED_LIBS=ON \
