--- a/main/gobject-introspection/APKBUILD
+++ b/main/gobject-introspection/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gobject-introspection
 pkgver=1.62.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Introspection system for GObject-based libraries"
 url="https://wiki.gnome.org/action/show/Projects/GObjectIntrospection"
 arch="all"
@@ -21,7 +21,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
