--- a/main/gstreamer/APKBUILD
+++ b/main/gstreamer/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gstreamer
 pkgver=1.16.2
-pkgrel=1
+pkgrel=2
 pkgdesc="GStreamer streaming media framework"
 url="https://gstreamer.freedesktop.org"
 arch="all"
@@ -19,7 +19,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Dintrospection=enabled \
 		-Dbash-completion=disabled \
 		-Dptp-helper-permissions=capabilities \
