--- a/main/json-glib/APKBUILD
+++ b/main/json-glib/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=json-glib
 pkgver=1.4.4
-pkgrel=1
+pkgrel=2
 pkgdesc="JSON library built on GLib"
 arch="all"
 url="https://wiki.gnome.org/Projects/JsonGlib"
@@ -17,7 +17,7 @@ build() {
 	meson \
 		--prefix=/usr \
 		--libdir=/usr/lib \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		--default-library=shared \
 		-Ddocs=true \
 		.  build
