--- a/main/libsecret/APKBUILD
+++ b/main/libsecret/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=libsecret
 pkgver=0.20.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Library for storing and retrieving passwords and other secrets"
 url="https://wiki.gnome.org/Projects/Libsecret"
 arch="all"
@@ -28,7 +28,7 @@ build() {
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
 		--default-library=both \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Dgtk_doc=false \
 		output
 	ninja -C output
