--- a/main/libssh/APKBUILD
+++ b/main/libssh/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libssh
 pkgver=0.9.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Library for accessing ssh client services through C libraries"
 url="https://www.libssh.org/"
 arch="all"
@@ -24,7 +24,7 @@ build() {
 	mkdir build && cd build
 	cmake .. \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DWITH_GSSAPI=OFF \
 		-DUNIT_TESTING=ON
