--- a/main/libvdpau/APKBUILD
+++ b/main/libvdpau/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libvdpau
 pkgver=1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Hardware-accelerated video playback library"
 url="https://gitlab.freedesktop.org/vdpau/libvdpau"
 arch="all"
@@ -18,7 +18,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Ddri2=true \
 		. output
 	ninja -C output
