--- a/main/mariadb-connector-c/APKBUILD
+++ b/main/mariadb-connector-c/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mariadb-connector-c
 pkgver=3.1.7
-pkgrel=0
+pkgrel=1
 pkgdesc="The MariaDB Native Client library (C driver)"
 url="https://mariadb.org/"
 arch="all"
@@ -21,10 +21,10 @@ build() {
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
 	cmake \
-		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DINSTALL_LIBDIR=/usr/lib \
 		-DINSTALL_INCLUDEDIR=/usr/include/mysql \
