--- a/main/orc/APKBUILD
+++ b/main/orc/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=orc
 pkgver=0.4.31
-pkgrel=1
+pkgrel=2
 pkgdesc="The Oil Run-time Compiler"
 url="https://gstreamer.freedesktop.org/modules/orc.html"
 arch="all"
@@ -26,7 +26,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Dorc-test=disabled \
 		. output
 	ninja -C output
