--- a/main/taglib/APKBUILD
+++ b/main/taglib/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=taglib
 pkgver=1.11.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Library for reading and editing metadata of several popular audio formats"
 url="http://taglib.github.io/"
 arch="all"
@@ -23,7 +23,7 @@ source="https://taglib.github.io/releases/taglib-$pkgver.tar.gz
 build() {
 	cd "$builddir"
 	cmake -DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DWITH_ASF=ON \
 		-DWITH_MP4=ON \
 		-DBUILD_SHARED_LIBS=ON
