--- a/main/vte3/APKBUILD
+++ b/main/vte3/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=vte3
 pkgver=0.58.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Virtual Terminal Emulator library"
 url="https://developer.gnome.org/vte/"
 arch="all"
@@ -24,7 +24,7 @@ prepare() {
 build() {
 	cd "$builddir/build"
 	meson \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Ddocs=false \
 		--prefix=/usr \
 		--sysconfdir=/etc \
