--- a/main/xorgproto/APKBUILD
+++ b/main/xorgproto/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: prspkt <prspkt@protonmail.com>
 pkgname=xorgproto
 pkgver=2019.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Combined X.Org X11 protocol headers"
 url="https://www.x.org"
 arch="noarch"
@@ -51,7 +51,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		--datadir=/usr/lib \
 		-Dlegacy=true \
 		. output
