community/qemu-openrc: upgrade to 0.8.0

--- a/community/qemu-openrc/APKBUILD
+++ b/community/qemu-openrc/APKBUILD
@@ -1,22 +1,20 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=qemu-openrc
-pkgver=0.7.0
+pkgver=0.8.0
 pkgrel=0
 pkgdesc="OpenRC init scripts for QEMU/KVM"
 url="https://github.com/jirutka/qemu-openrc"
 arch="noarch"
 license="MIT"
 depends="qemu socat"
-makedepends=""
 install="$pkgname.pre-install $pkgname.pre-upgrade"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jirutka/$pkgname/archive/v$pkgver.tar.gz"
+source="https://github.com/jirutka/$pkgname/archive/v$pkgver/$pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$pkgver"
 options="!check"
 
 package() {
-	cd "$builddir"
 	PREFIX="/usr" DESTDIR="$pkgdir" ./install
 }
 
-sha512sums="c5284f5c095874a49263546d0fbb925f49a01efa9eec8102ea054a334606144dd9480ab2333f2b42d4163677000816bf9f5b6d313faf231bd4b8cc55c9ed9bc6  qemu-openrc-0.7.0.tar.gz"
+sha512sums="1b442695d4d78bf0ac2122cdd3ee6af9db214b1ad1d877f408c7c13c684af7350bdefe6f7d5222b8d26b3c2c8dcaf060eb4f12902ae1b624f0b8fb5ef4db0273  qemu-openrc-0.8.0.tar.gz"
