main/xkbcomp: upgrade to 1.4.3

--- a/main/xkbcomp/APKBUILD
+++ b/main/xkbcomp/APKBUILD
@@ -1,21 +1,18 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xkbcomp
-pkgver=1.4.2
+pkgver=1.4.3
 pkgrel=0
 pkgdesc="XKBD keymap compiler"
 url="https://xorg.freedesktop.org"
 arch="all"
 license="MIT"
-depends=
 makedepends="libx11-dev libxkbfile-dev util-macros"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/app/xkbcomp-$pkgver.tar.bz2"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,13 +24,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="b00d1eb08c19be86044418c8ea3bfc3c3973406c481878270138a70ed9dab348acb8e4d0af8678879598ffbd7df1c640a63d0abad3d7481758be99af8dd7734e  xkbcomp-1.4.2.tar.bz2"
+sha512sums="827713c0413aecdcad2b61edb7b8c7c7a002e18505b9041f570e2f680907193cb5ff8a5b424695e21110b2d06c145cbf0e397e52347421ee946f06e2a51f135d  xkbcomp-1.4.3.tar.bz2"
