community/php7: add lmdb support for php7-dba

--- a/community/php7/APKBUILD
+++ b/community/php7/APKBUILD
@@ -27,7 +27,7 @@
 pkgname=php7
 _pkgreal=php
 pkgver=7.3.15
-pkgrel=1
+pkgrel=2
 _apiver=20180731
 _suffix=${pkgname#php}
 # Is this package the default (latest) PHP version?
@@ -67,6 +67,7 @@ makedepends="
 	libical-dev
 	libjpeg-turbo-dev
 	libpng-dev
+	lmdb-dev
 	openssl-dev
 	libsodium-dev
 	libwebp-dev
@@ -236,8 +237,6 @@ esac
 #     - CVE-2018-10549
 
 prepare() {
-	cd "$builddir"
-
 	default_prepare
 	update_config_sub
 
@@ -302,6 +301,7 @@ _build() {
 			--with-db4 \
 			--with-dbmaker=shared \
 			--with-gdbm \
+			--with-lmdb \
 		--enable-dom=shared \
 		--with-enchant=shared \
 		--enable-exif=shared \
@@ -380,8 +380,6 @@ _build() {
 }
 
 build() {
-	cd "$builddir"
-
 	# phpdbg
 	_build --enable-phpdbg \
 		--enable-phpdbg-webhelper \
@@ -403,8 +401,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	# PHP is so stupid that it's not able to resolve dependencies
 	# between extensions and load them in correct order, so we must
 	# help it...
@@ -425,14 +421,12 @@ check() {
 	NO_INTERACTION=1 REPORT_EXIT_STATUS=1 \
 		SKIP_SLOW_TESTS=1 SKIP_ONLINE_TESTS=1 TEST_TIMEOUT=10 \
 		TZ= LANG= LC_ALL= \
-		make test || [ "$allow_fail" = yes ] || return 1
+		make test || [ "$allow_fail" = yes ]
 
 	echo 'NOTE: We have skipped quite a lot tests, see disabled-tests.list.'
 }
 
 package() {
-	cd "$builddir"
-
 	make -j1 INSTALL_ROOT="$pkgdir" install
 
 	install -Dm644 php.ini-production "$pkgdir"/etc/$pkgname/php.ini
