--- a/community/rtl8821ce-lts/APKBUILD
+++ b/community/rtl8821ce-lts/APKBUILD
@@ -18,7 +18,7 @@ arch="x86_64 x86" # Only builds on these platforms
 license="GPL-2.0-only"
 makedepends="linux-lts-dev"
 options="!check"
-source="$pkgname-$pkgver.tar.gz::https://github.com/tomaspinho/rtl8821ce/archive/$_commit.tar.gz"
+source="$pkgname-$_commit.tar.gz::https://github.com/tomaspinho/rtl8821ce/archive/$_commit.tar.gz"
 builddir="$srcdir/rtl8821ce-$_commit"
 
 prepare() {
@@ -44,4 +44,4 @@ package() {
 		"$pkgdir"/lib/modules/$_kver-$_krel-$_flavor/extra/8821ce.ko
 }
 
-sha512sums="8de5f2ddfa84a72e4ff3d2a1450201b628c82dc4a163b9329f448f4088510f63ff5997da51d2fbb2be306bed752fa77d9d4920cb08d4fb410c82b578d995f19c  rtl8821ce-lts-5.4.20.tar.gz"
+sha512sums="8de5f2ddfa84a72e4ff3d2a1450201b628c82dc4a163b9329f448f4088510f63ff5997da51d2fbb2be306bed752fa77d9d4920cb08d4fb410c82b578d995f19c  rtl8821ce-lts-74c454f7af8ec3426cc6a937f37c562c10f49.tar.gz"
