--- a/community/perl-email-mime/APKBUILD
+++ b/community/perl-email-mime/APKBUILD
@@ -4,41 +4,35 @@
 pkgname=perl-email-mime
 _pkgreal=Email-MIME
 pkgver=1.946
-pkgrel=1
+pkgrel=2
 pkgdesc="easy MIME message handling"
 url="https://metacpan.org/release/Email-MIME/"
 arch="noarch"
-license="GPL PerlArtistic"
-cpandepends="perl-email-mime-contenttype perl-email-mime-encodings
+license="GPL-1.0-or-later Artistic-1.0-Perl"
+depends="perl-email-mime-contenttype perl-email-mime-encodings
 perl-email-simple perl-email-address perl-email-messageid perl-mime-types
-perl-module-runtime"
-cpanmakedepends="   "
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+perl-email-address-xs perl-module-runtime"
+makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RJ/RJBS/$_pkgreal-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install || return 1
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
