community/phonon: fix url

--- a/community/phonon/APKBUILD
+++ b/community/phonon/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=phonon
 pkgver=4.11.1
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE multimedia backend"
-url="https://phonon.kde.org/"
+url="https://userbase.kde.org/Phonon"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtdeclarative-dev glib-dev"
