testing/perl-www-mechanize: upgrade to 1.96

--- a/testing/perl-www-mechanize/APKBUILD
+++ b/testing/perl-www-mechanize/APKBUILD
@@ -3,19 +3,17 @@
 # Maintainer: Timothy Legge <timlegge@gmail.com>
 pkgname=perl-www-mechanize
 _pkgreal=WWW-Mechanize
-pkgver=1.95
+pkgver=1.96
 pkgrel=0
 pkgdesc="Handy web browsing in a Perl object"
 url="https://metacpan.org/release/WWW-Mechanize/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-libwww perl-html-tree perl-uri perl-html-parser
+depends="perl-libwww perl-html-tree perl-uri perl-html-parser
 	perl-http-cookies perl-http-message perl-html-form"
-cpancheckdepends="perl-cgi perl-http-daemon perl-test-fatal perl-test-output
-	perl-test-deep perl-http-server-simple perl-test-warnings"
-depends="$cpandepends"
+checkdepends="perl-cgi perl-http-daemon perl-test-fatal perl-test-output
+	perl-test-deep perl-http-server-simple perl-test-warnings perl-test-warn"
 makedepends="perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/O/OA/OALDERS/WWW-Mechanize-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -36,4 +34,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="1e9c97c59892e67bd9654fde691606afdd899f6b88a404800e18a2c852367e886209077f5c7bc8a25ded466a2af1c7bcdf7a29e3535af2ed32b80f0839eaedd9  WWW-Mechanize-1.95.tar.gz"
+sha512sums="6ecd9a38d187422e2ed84d7d475849273f2f0c86fa1a2429cf8327a8f1d2853562b6557ca93c67c6c65351d46d208ffef5cd3a056b2fae34d1afb75cce1720bc  WWW-Mechanize-1.96.tar.gz"
