community/phonon-backend-gstreamer: fix url

--- a/community/phonon-backend-gstreamer/APKBUILD
+++ b/community/phonon-backend-gstreamer/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=phonon-backend-gstreamer
 pkgver=4.10.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Phonon gstreamer backend for Qt5"
-url="https://phonon.kde.org/"
+url="https://userbase.kde.org/Phonon"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 license="LGPL-2.1-only OR LGPL-3.0-only"
 makedepends="extra-cmake-modules qt5-qtx11extras-dev gstreamer-dev gst-plugins-base-dev phonon-dev
