community/calindori: upgrade to 1.1

--- a/community/calindori/APKBUILD
+++ b/community/calindori/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=calindori
-pkgver=1.0
+pkgver=1.1
 pkgrel=0
 pkgdesc="Calendar for Plasma Mobile"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -13,23 +13,15 @@ source="$pkgname-$pkgver.tar.gz::https://invent.kde.org/kde/calindori/-/archive/
 options="!check" # No tests
 builddir="$srcdir/$pkgname-v$pkgver"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="ec0f2c8541ed36bf43f9cb95ef056e46badc12220f1b737e040c0e741a79149a2e222b710e3d511d2cd778dcf2299bd365c3b54c88228c81fae86887ab1586ae  calindori-1.0.tar.gz"
+sha512sums="9fba4b2c44cd24558b61b31f984317b798ae094b0090cecf0285771cdc1d98192e63edbd501a39abfd73e9d9635ec9eee25b9ced31f76f23bf50cda5b96807e5  calindori-1.1.tar.gz"
