--- a/main/gst-plugins-base/APKBUILD
+++ b/main/gst-plugins-base/APKBUILD
@@ -1,13 +1,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gst-plugins-base
 pkgver=1.16.2
-pkgrel=2
+pkgrel=3
 pkgdesc="GStreamer streaming media framework base plug-ins"
 url="https://gstreamer.freedesktop.org"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.0-or-later"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 replaces="gst-plugins-base1 gst-plugins-bad"
+depends_dev="wayland-dev"
 makedepends="alsa-lib-dev cdparanoia-dev expat-dev glib-dev
 	gobject-introspection-dev gstreamer-dev gtk+3.0-dev libice-dev
 	libogg-dev libsm-dev libtheora-dev libvorbis-dev libxv-dev mesa-dev
