main/icu: upgrade to 65.1
prepare() was removed because the issues have been fixed with:
https://github.com/unicode-org/icu/commit/f2d8d1be68dfe12abe5237f0c14bb6da951e0d78
https://github.com/unicode-org/icu/commit/c620f117ca4ad8eb1a3613d115fc3f4d3871ccb6
https://github.com/unicode-org/icu/commit/be63df401e118aa45a574c27be2e65564c27739a

--- a/main/icu/APKBUILD
+++ b/main/icu/APKBUILD
@@ -1,23 +1,16 @@
 # Contributor: Sergey Lukin <sergej.lukin@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=icu
-pkgver=64.2
-
-# convert x.y.z to x_y_z
-_ver=${pkgver//./_}
-
+pkgver=65.1
 pkgrel=0
 pkgdesc="International Components for Unicode library"
-url="http://www.icu-project.org/"
+url="http://icu-project.org/"
 arch="all"
 license="MIT ICU Unicode-TOU"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs"
-depends=
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 checkdepends="diffutils python3"
-makedepends=
-source="http://download.icu-project.org/files/icu4c/${pkgver}/${pkgname}4c-$_ver-src.tgz
-	"
+source="https://github.com/unicode-org/icu/releases/download/release-${pkgver//./-}/icu4c-${pkgver//./_}-src.tgz"
 
 # secfixes:
 #   57.1-r1:
@@ -34,27 +27,7 @@ case "$CARCH" in
 	armv7) options="!check";;
 esac
 
-prepare() {
-	cd "$builddir"
-	default_prepare
-	update_config_sub
-
-	# strtod_l() is not supported by musl; also xlocale.h is missing
-	# It is not possible to disable its use via configure switches or env vars
-	# so monkey patching is needed. Idea was stollen from openembedded
-	# https://github.com/openembedded/openembedded-core/blob/master/meta/recipes-support/icu/icu.inc#L30
-	sed -i -e 's,DU_HAVE_STRTOD_L=1,DU_HAVE_STRTOD_L=0,' configure.ac
-	sed -i -e 's,DU_HAVE_STRTOD_L=1,DU_HAVE_STRTOD_L=0,' configure
-
-	local x
-	# https://bugs.icu-project.org/trac/ticket/6102
-	for x in ARFLAGS CFLAGS CPPFLAGS CXXFLAGS FFLAGS LDFLAGS; do
-		sed -i -e "/^${x} =.*/s:@${x}@::" "config/Makefile.inc.in"
-	done
-}
-
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -64,17 +37,15 @@ build() {
 		--disable-samples \
 		--enable-static \
 		--mandir=/usr/share/man
-	mkdir -p data/out # work around build issue
+	mkdir -p data/out # work around for s390x build issue
 	make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 	chmod +x "$pkgdir"/usr/bin/icu-config
 	install -Dm644 "$srcdir"/icu/license.html \
@@ -92,4 +63,4 @@ libs() {
 	replaces="icu"
 }
 
-sha512sums="5ecb4c230ba45918747a1cf9aef86f555aa07d5b29b1d07ab674e8013f46dfb907a0e9d6945db41155f9dc3012fd94e1152ffc19f61a68b6dfcbabdcb8ae9d78  icu4c-64_2-src.tgz"
+sha512sums="8f1ef33e1f4abc9a8ee870331c59f01b473d6da1251a19ce403f822f3e3871096f0791855d39c8f20c612fc49cda2c62c06864aa32ddab2dbd186d2b21ce9139  icu4c-65_1-src.tgz"
