unmaintained/*: make CMake and meson respect our C{,PP,XX}FLAGS
See: https://lists.alpinelinux.org/~alpine/devel/%3C2896c13070c508a49cbaa72c8fb7f34ea947358b.camel%40cogitri.dev%3E

--- a/unmaintained/llvm3.9/APKBUILD
+++ b/unmaintained/llvm3.9/APKBUILD
@@ -6,7 +6,7 @@ _pkgname=llvm
 pkgver=3.9.1
 _majorver=${pkgver%.*}
 pkgname=$_pkgname$_majorver
-pkgrel=5
+pkgrel=6
 pkgdesc="Low Level Virtual Machine compiler system (version $_majorver)"
 arch="all"
 url="http://llvm.org/"
@@ -79,7 +79,7 @@ build() {
 	local ffi_include_dir="$(pkg-config --cflags-only-I libffi | sed 's|^-I||g')"
 
 	cmake -G "Unix Makefiles" -Wno-dev \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/$_prefix \
 		-DCMAKE_VERBOSE_MAKEFILE=NO \
 		-DFFI_INCLUDE_DIR="$ffi_include_dir" \
