--- a/unmaintained/openvas-cli/APKBUILD
+++ b/unmaintained/openvas-cli/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openvas-cli
 pkgver=1.4.5
-pkgrel=4
+pkgrel=5
 _pkgid=2397
 pkgdesc="The OpenVAS Command-Line Interface"
 url="http://www.openvas.org"
@@ -18,7 +18,7 @@ builddir="$srcdir"/$pkgname-$pkgver
 build() {
 	cd "$builddir"
 	cmake \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DSYSCONFDIR=/etc \
 		-DLOCALSTATEDIR=/var .
