--- a/unmaintained/llvm4/APKBUILD
+++ b/unmaintained/llvm4/APKBUILD
@@ -6,7 +6,7 @@ _pkgname=llvm
 pkgver=4.0.0
 _majorver=${pkgver%%.*}
 pkgname=$_pkgname$_majorver
-pkgrel=6
+pkgrel=7
 pkgdesc="Low Level Virtual Machine compiler system, version $_majorver"
 arch="all"
 url="http://llvm.org/"
@@ -75,7 +75,7 @@ build() {
 	local ffi_include_dir="$(pkg-config --cflags-only-I libffi | sed 's|^-I||g')"
 
 	cmake -G "Unix Makefiles" -Wno-dev \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/$_prefix \
 		-DCMAKE_VERBOSE_MAKEFILE=NO \
 		-DFFI_INCLUDE_DIR="$ffi_include_dir" \
