--- a/unmaintained/opencv/APKBUILD
+++ b/unmaintained/opencv/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer:
 pkgname=opencv
 pkgver=3.2.0
-pkgrel=5
+pkgrel=6
 pkgdesc="Computer vision and machine learning software library"
 url="https://opencv.org"
 arch="all"
@@ -32,7 +32,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DENABLE_PRECOMPILED_HEADERS=OFF \
