--- a/unmaintained/sipwise-sems/APKBUILD
+++ b/unmaintained/sipwise-sems/APKBUILD
@@ -6,7 +6,7 @@
 _basename=sems
 pkgname=sipwise-$_basename
 pkgver=3.8.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="SIP Express Media Server, an extensible SIP media server"
 url="http://iptel.org/sems/"
 arch="all !aarch64"
@@ -61,7 +61,7 @@ build() {
 	# force cmake to use relative paths. It helps us avoid having the
 	# full file path in the logs
 	cmake \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_USE_RELATIVE_PATHS=yes \
 		-DSEMS_USE_SPANDSP=yes \
 		-DSEMS_USE_LIBSAMPLERATE=yes \
