community/cage: fix build with wlroots >= 0.9.0
See https://github.com/Hjdskes/cage/issues/89

--- a/community/cage/APKBUILD
+++ b/community/cage/APKBUILD
@@ -10,10 +10,13 @@ license="MIT"
 depends="xorg-server-xwayland"
 makedepends="meson cmake wlroots-dev wayland-protocols"
 options="!check" #No checks
-source="$pkgname"-"$pkgver".tar.gz::https://github.com/Hjdskes/cage/archive/v"$pkgver".tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/Hjdskes/cage/archive/v$pkgver.tar.gz
+	0001-Removed-destructors-per-wlroots-PR-1915.patch"
 
 prepare() {
-	meson --buildtype=plain -Dxwayland=true --prefix /usr "$srcdir/build"
+	default_prepare
+	meson --buildtype=plain -Dxwayland=true \
+		--prefix /usr "$srcdir/build"
 }
 
 build() {
@@ -24,4 +27,5 @@ package() {
 	DESTDIR="$pkgdir" ninja -C "$srcdir/build" install
 }
 
-sha512sums="f071f04f1ff7d2b89ae72238ef1a28fd3fbc389803e4a4fe0c3d938c7a2a1cc962b63929d081d975f98131ff6dd9637762e8036bb320277e2580f0cbeb0c6201  cage-0.1.1.tar.gz"
+sha512sums="f071f04f1ff7d2b89ae72238ef1a28fd3fbc389803e4a4fe0c3d938c7a2a1cc962b63929d081d975f98131ff6dd9637762e8036bb320277e2580f0cbeb0c6201  cage-0.1.1.tar.gz
+1de44027277095786341b15a27bece111105155552d6ca6d27510f30acd921f1a9218ca76e3573e95995540128a076f99b3be219421ae09764f3045fb0638a5a  0001-Removed-destructors-per-wlroots-PR-1915.patch"
