testing/tesseract-git: new snapshot
Workaround for "ERROR: tesseract-git-dev*: usr/lib/pkgconfig/tesseract.pc: pkgconf version 4.00.00dev is invalid" causing build to fail - https://gitlab.alpinelinux.org/TBK/aports/-/jobs/53665

--- a/testing/tesseract-git/APKBUILD
+++ b/testing/tesseract-git/APKBUILD
@@ -1,25 +1,28 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer:
 pkgname=tesseract-git
-_sha=5f5e85e4a0827cf44f57bc87344d3fa15b067a75
-pkgver=20170807
-pkgrel=5
+_sha=695f862bd711a147b1f27c7ea51b7592a934c77b
+pkgver=20200221
+pkgrel=0
 pkgdesc="Tesseract Open Source OCR Engine"
 url="https://github.com/tesseract-ocr/tesseract"
 arch="all"
 license="Apache-2.0"
-depends=""
-makedepends="cmake leptonica-dev tiff-dev icu-dev cairo-dev automake autoconf
-	libtool autoconf-archive pango-dev"
-install=""
+makedepends="autoconf autoconf-archive automake cairo-dev icu-dev leptonica-dev libtool pango-dev tiff-dev"
 replaces="tesseract-ocr"
 subpackages="$pkgname-dev $pkgname-training"
-source="tesseract-$pkgver.tar.gz::https://github.com/tesseract-ocr/tesseract/archive/$_sha.tar.gz"
+source="tesseract-$pkgver.tar.gz::https://github.com/tesseract-ocr/tesseract/archive/$_sha.tar.gz
+	include-time-h.patch
+	"
+
 builddir="$srcdir/tesseract-$_sha"
 
+prepare() {
+	default_prepare
+	./autogen.sh
+}
+
 build() {
-        cd "$builddir"
-        ./autogen.sh
         ./configure \
                 --build=$CBUILD \
                 --host=$CHOST \
@@ -34,7 +37,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -43,4 +45,5 @@ training() {
 	make DESTDIR="$subpkgdir" training-install
 }
 
-sha512sums="ce88bb280931c9636d72f338e1e2d159333d281016d8c71ddeb11af79b3468349eabcc50885dfa363acc8508477b86c1e4480126bb5108cf1944093f116d9b41  tesseract-20170807.tar.gz"
+sha512sums="a8d2396d56acf58d60ed3b3d1aeb77b52870bb1b83502070af79a5138f39a0aec27841a4fca4bdff114eb46d80630be67b2dfc8fc194f6b87c129d2357aea3c7  tesseract-20200221.tar.gz
+b0fe8ed2f3d00f61749fffc7316392dbc063cd03084cba26ac84b7a3a374bebc75ad07ccb588d3f5ac83acc80d33bb9c2de05703ce50df86f48294f4a5be0424  include-time-h.patch"
