community/zabbix: upgrade to 4.4.6
Closes !4347

--- a/community/zabbix/APKBUILD
+++ b/community/zabbix/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=zabbix
-pkgver=4.4.5
+pkgver=4.4.6
 pkgrel=0
 pkgdesc="Enterprise-class open source distributed monitoring"
 url="http://www.zabbix.com"
@@ -17,8 +17,8 @@ _php_depends="$_php $_php-gd $_php-curl $_php-bcmath $_php-sockets
 	$_php-fileinfo
 	"
 makedepends="postgresql-dev curl-dev net-snmp-dev libevent-dev pcre-dev
-	sqlite-dev mariadb-connector-c-dev curl-dev openipmi-dev unixodbc-dev
-	libxml2-dev autoconf automake libssh2-dev gnutls-dev
+	sqlite-dev mariadb-connector-c-dev openipmi-dev unixodbc-dev gnutls-dev
+	libxml2-dev autoconf automake libssh2-dev
 	$_php_depends"
 install="$pkgname.pre-install"
 pkgusers="zabbix"
@@ -41,6 +41,8 @@ source="https://downloads.sourceforge.net/zabbix/zabbix-${pkgver/_/}.tar.gz
 	zabbix_agent2.conf.patch
 	"
 
+builddir="$srcdir/$pkgname-${pkgver/_/}"
+
 # Agent2 does not build on x86 atm
 case $CARCH in
 *)
@@ -49,7 +51,6 @@ case $CARCH in
 	_build_agent2=true;;
 esac
 
-builddir="$srcdir/$pkgname-${pkgver/_/}"
 
 # security fixes:
 #   3.0.4-r0:
@@ -249,7 +250,7 @@ agent2_openrc() {
 		"$subpkgdir"/etc/init.d/zabbix-agent2
 }
 
-sha512sums="b7971f3c25270c5e35861a0db8e810d8ffe6c59ffc935fa2df5b1fd5d591d577db60e04673ca0a6f158dd126245a6ee4cd4e84a3637c447c9b6f68f77848f114  zabbix-4.4.5.tar.gz
+sha512sums="f9e84872f0210e497261462de95e9096391fc74bee6fd511087825fcfdd8f363003bd090e01a8a092a69ef1f01c4dd31d623f5321cf77dbced0bd337fb91682c  zabbix-4.4.6.tar.gz
 9998ee172a28002d98bacc3f76038ff52b8cf2b206e101418d76b4ca3de94afaf92cb4f7a6235ecf177f74beb9dd3ea1f3983c4f164b4f60bb601acba65aa175  zabbix-server.initd
 9c06527bf653c40585fa7eeb3f7a0b2fc454031d24cd0d1633aed87b78a681c5227a193c5b9fcfcea0839135874e27ba7dd9b198573f905f680a2856f79e9512  zabbix-server.confd
 0d50795233ee469e36e9788f8685b16207a37f8a9370e6591688906176e7cb8387ce06f132d7e582a1757fdea7c584a70ccfac39a604da315d71121fa629cbb7  zabbix-agentd.initd
