main/uboot-tools: move to main, drop unused sdl-dev dependency

--- a/main/uboot-tools/APKBUILD
+++ b/main/uboot-tools/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="U-Boot bootloader utility tools"
 url="https://www.denx.de/wiki/U-Boot/WebHome"
 arch="all !s390x !ppc64le"
 license="GPL"
-makedepends="$depends_dev bison flex openssl-dev linux-headers sdl-dev"
+makedepends="$depends_dev bison flex openssl-dev linux-headers"
 subpackages="$pkgname-examples"
 options="!check" # No test suite
 source="http://ftp.denx.de/pub/u-boot/u-boot-$pkgver.tar.bz2
