community/gvmd: fix build with CMake None build type
Without introducing a new dependency by passing -DNDEBUG.

--- a/community/gvmd/APKBUILD
+++ b/community/gvmd/APKBUILD
@@ -39,7 +39,9 @@ prepare() {
 
 build() {
 	cd "$builddir"/build
-	cmake -DCMAKE_BUILD_TYPE=None \
+	# Requires libexecinfo when compiled without -DNDEBUG.
+	CFLAGS="$CFLAGS -DNDEBUG" \
+		cmake -DCMAKE_BUILD_TYPE=None \
 		-DSBINDIR=/usr/bin \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DSYSCONFDIR=/etc \
