--- a/testing/perl-dbix-class-helpers/APKBUILD
+++ b/testing/perl-dbix-class-helpers/APKBUILD
@@ -3,21 +3,19 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-dbix-class-helpers
 _pkgreal=DBIx-Class-Helpers
-pkgver=2.034002
+pkgver=2.035000
 pkgrel=0
 pkgdesc="Simplify the common case stuff for DBIx::Class."
 url="https://metacpan.org/release/DBIx-Class-Helpers"
 arch="noarch !armv7"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-safe-isa perl-dbix-class perl-carp-clan perl-text-brew
+depends="perl-safe-isa perl-dbix-class perl-carp-clan perl-text-brew
 	perl-namespace-clean perl-sub-exporter-progressive perl-module-runtime
 	perl-try-tiny perl-dbix-introspector perl-dbix-class-candy
 	perl-lingua-en-inflect perl-moo"
-cpancheckdepends="perl-dbd-sqlite perl-test-fatal perl-test-roo
-	perl-aliased perl-test-deep perl-datetime-format-sqlite"
-depends="$cpandepends"
 makedepends="perl-dev"
-checkdepends="$cpancheckdepends"
+checkdepends="perl-dbd-sqlite perl-test-fatal perl-test-roo
+	perl-aliased perl-test-deep perl-datetime-format-sqlite"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/F/FR/FREW/DBIx-Class-Helpers-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -44,4 +42,4 @@ check() {
 	make test
 }
 
-sha512sums="61d482b702803bd63d8129365de57e8e8aa060bd2ecbffba6b7ffcaddb176b63bba22776774c3055cae5ca64bdf583b55f473a2f615aed2d265a8044bcac7d2c  DBIx-Class-Helpers-2.034002.tar.gz"
+sha512sums="f1eb440eab2ac59ba5df2969b0851df59445d1b12a961e3a03fe26780cc635bb5d955be80b0589c59c159049c1a566f2a8f5902147ada5a9142dd29ef2cf08fe  DBIx-Class-Helpers-2.035000.tar.gz"
