--- a/main/lua-filesize/APKBUILD
+++ b/main/lua-filesize/APKBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Maintainer: Leo <thinkabit.ukim@gmail.com>
 _pkgname=filesize
 pkgname=lua-$_pkgname
 pkgver=0.1.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Generate human readable string describing the size of files"
 url="https://github.com/starius/lua-filesize"
 arch="all"
