--- a/community/lsscsi/APKBUILD
+++ b/community/lsscsi/APKBUILD
@@ -1,21 +1,16 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=lsscsi
-pkgver=0.30
+pkgver=0.31
 pkgrel=0
 pkgdesc="Lists information about SCSI devices"
 url="http://sg.danny.cz/scsi/lsscsi.html"
 arch="all"
 license="GPL-2.0-or-later"
-depends=
 makedepends="linux-headers"
-install=
 subpackages="$pkgname-doc"
-source="http://sg.danny.cz/scsi/$pkgname-$pkgver.tar.xz"
-
-builddir="$srcdir"/$pkgname-${pkgver/./}r154
+source="http://sg.danny.cz/scsi/lsscsi-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,8 +22,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="255bf961e6f8db40553748dbfcabac9410517bd1c83d23f95a94ce7f14f00c9cec00d37424f0f2a120c800fa410b362902f9988042b264e14089ff957cd7077d  lsscsi-0.30.tar.xz"
+sha512sums="4716b8964ab05dad79552dd9b70729b39abe4f67fa304718dd0ee090ff9396441940487c89eb2fb2daaae71307d1f795bd1c8ee7c7ba98a92da0587ce4c747bd  lsscsi-0.31.tar.xz"
