community/darktable: fix build with cmake build type none

--- a/community/darktable/APKBUILD
+++ b/community/darktable/APKBUILD
@@ -40,6 +40,7 @@ options="!check" # Dependencies missing
 source="https://github.com/darktable-org/darktable/releases/download/release-${pkgver/_/}/darktable-${pkgver/_/.}.tar.xz
 	fix-ifunc-multiarch.patch
 	null-char-pointer-sentinel.patch
+	fix-cmake-none.patch
 	"
 
 prepare() {
@@ -65,4 +66,5 @@ package() {
 
 sha512sums="de154cc19281f61316363243db3e531be33ac4c4632d6277ba715884b83a3c35f1d433a0e53f5f1eb7ffe03c6fcba4629612c94f942c196807c876b421faafc6  darktable-3.0.0.tar.xz
 bbb665f06b21a75f34a82f26d9e7421281445843b392871d1f851c7b73eabc862bbe43525b669a67429a22fea63bb03ca90b8a1d200d62a52907946ffcd9a7e3  fix-ifunc-multiarch.patch
-5ca542c875c769c4475b0b75244365f2e5829e451e05b9294627e154de9559c995aa252f128f6ffab36c60d17a618ff562abddb88c981672960e7c35e612ebdb  null-char-pointer-sentinel.patch"
+5ca542c875c769c4475b0b75244365f2e5829e451e05b9294627e154de9559c995aa252f128f6ffab36c60d17a618ff562abddb88c981672960e7c35e612ebdb  null-char-pointer-sentinel.patch
+62e7214fb8cadd5f7d994283c684e39052ccfb020861852126dd4af8b071c406a57a08580b0d3415e1e12634b1e88af9c29da420e2f58edb57849db0d4954b29  fix-cmake-none.patch"
