community/kvantum: disable on armhf

--- a/community/kvantum/APKBUILD
+++ b/community/kvantum/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=2
 pkgdesc="SVG-based theme engine for Qt5"
 options="!check" # No testsuite
 url="https://github.com/tsujan/Kvantum"
-arch="all"
+arch="all !armhf" # Limited by kwindowsystem-dev
 license="GPL-2.0-or-later"
 depends="hicolor-icon-theme"
 makedepends="cmake qt5-qtbase-dev qt5-qtsvg-dev qt5-qtx11extras-dev libx11-dev
