community/atools: upgrade to 18.12.3

--- a/community/atools/APKBUILD
+++ b/community/atools/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=atools
-pkgver=18.10.1
+pkgver=18.12.3
 pkgrel=0
 pkgdesc="Auxilary scripts for abuild"
 url="https://github.com/maxice8/atools"
 arch="noarch"
 license="MIT"
-depends="grep"
+depends="grep lua5.3 lua5.3-lyaml"
 makedepends="scdoc redo"
 checkdepends="bats"
 subpackages="$pkgname-doc"
@@ -25,4 +25,4 @@ package() {
 	DESTDIR="$pkgdir" redo install
 }
 
-sha512sums="6c04c214b7231242612c44046d0880490e796f61d51489fdbb1b3d3c57f042d506a6fddf6129f4763e01ae8df4d85e3a428831ea594bbb402c07f815c4aead8b  atools-18.10.1.tar.gz"
+sha512sums="22784dffa2e1a5e047d16be2f4c5e63cbe7ee08058dbaaae6e4c02dbf13e6e4c8b97ddfc1e514f63c522b85a4f387704775652ff332280a2f9c266ec1bbc5dbf  atools-18.12.3.tar.gz"
