community/shaderc: fix build

--- a/community/shaderc/APKBUILD
+++ b/community/shaderc/APKBUILD
@@ -12,6 +12,7 @@ makedepends="cmake glslang-static glslang-dev spirv-tools-dev python3"
 subpackages="$pkgname-static $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/google/shaderc/archive/v$pkgver.tar.gz
 	fix-link-order.patch
+	fix-build.patch
 	"
 
 prepare() {
@@ -60,4 +61,5 @@ package() {
 }
 
 sha512sums="c76887ad0a96145211b6550b0dfe63091df9e1463f9a3140aba2d1982c33e98ad14fb4bcf9ce2281433fc77626fc892c268d0636b9f348a159dd06e3f41b461a  shaderc-2019.0.tar.gz
-bd24c90b93bf8bd7e56682e02543ff8a5c988549e76502144c2f4904e96b67ca0bc9d1e94b811bcdad1e765625256d3feabeb20ca299f2abb220e6e398d5a590  fix-link-order.patch"
+bd24c90b93bf8bd7e56682e02543ff8a5c988549e76502144c2f4904e96b67ca0bc9d1e94b811bcdad1e765625256d3feabeb20ca299f2abb220e6e398d5a590  fix-link-order.patch
+b0231c8e39b9755444d74855d79f9aa0aad038c652a83f8c316d2e75cf7084a775151e6ecd367340a92c568f86b9e89112338fcd0b37976e383db6a0f8ff5952  fix-build.patch"
