testing/mariadb-connector-odbc: fix build with CMake None build type

--- a/testing/mariadb-connector-odbc/APKBUILD
+++ b/testing/mariadb-connector-odbc/APKBUILD
@@ -17,16 +17,14 @@ build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
-	cmake \
+	# Link to /usr/include/mysql necessary when using system installed mariadb-connector-c
+	CFLAGS="$CFLAGS -I/usr/include/mysql" \
+		cmake \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=None \
-		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
-		-DCMAKE_C_FLAGS="$CFLAGS" \
-		-DCMAKE_C_FLAGS_RELEASE="-I/usr/include/mysql" \
 		${CMAKE_CROSSOPTS} .
-	# Link to /usr/include/mysql necessary when using system installed mariadb-connector-c
 	make
 }
 
