community/opencpn: hotfix for build failure
Somehow, it doesn't link to -lexecinfo automatically. Pass it explicitly
to work around that issue.

--- a/community/opencpn/APKBUILD
+++ b/community/opencpn/APKBUILD
@@ -24,6 +24,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUNDLE_GSHHS=CRUDE \
 		-DBUNDLE_TCDATA=ON \
+		-DEXTRA_LIBS="-lexecinfo" \
 		-DBUNDLE_DOCS=ON
 	make
 }
